--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -5,7 +5,11 @@
     <!--post_image.get_imageの部分はPostImageモデル内に記述したメソッドを呼び出し-->
     <%= image_tag post_image.get_image %>
     <!--post_image.カラム名とすることでデータ取得-->
-    <p>投稿ユーザー画像：<%= image_tag 'sample-author1.jpg' %></p>
+    
+     <!--1. post_image.userで、投稿画像に紐づいたユーザーの情報(投稿したユーザーの情報)を取得できる-->
+     <!--2. 「.user」の部分でUserモデルを使用しているため、Userモデルに記述しているget_profile_imageメソッドが使えるようになる-->
+     <!--3. 結果、post_image.user.get_profile_imageと記述することで、投稿画像に紐づいたユーザーのプロフィール画像を表示できる-->
+     <p>投稿ユーザー画像：<%= image_tag post_image.user.get_profile_image(100,100) %></p>
     <p>ショップ名：<%= post_image.shop_name %></p>
     <p>説明：<%= post_image.caption %></p>
     <p>ユーザーネーム：<%= post_image.user.name %></p>
